crux_core/src/type_generation/facet/plugins/snapshots/crux_core__type_generation__facet__plugins__tests__core_kotlin_with_boltffi.snap
---
source: crux_core/src/type_generation/facet/plugins/tests.rs
expression: "core_with_boltffi::<Kotlin>()"
---

/// The core's FFI surface, as bytes. Implement it around the `CoreFfi` your
/// Rust crate exports, or with a fake for tests.
interface CoreBridge {
    fun update(event: ByteArray): ByteArray
    fun resolve(id: UInt, output: ByteArray): ByteArray
    fun view(): ByteArray
}

/// The shell's side of the core: it serializes events, dispatches the
/// requests that come back, and resolves them through the bridge.
///
/// `Render` is handled here, so an `EffectHandler` need not implement it.
/// Each request is dispatched in its own coroutine on `scope`.
class Core(
    private val bridge: CoreBridge,
    handler: EffectHandler,
    private val scope: CoroutineScope,
) {
    private val _view = MutableStateFlow(Shared.ViewModel.bincodeDeserialize(bridge.view()))
    /// The view model as of the last `Render`.
    val view: StateFlow<Shared.ViewModel> = _view.asStateFlow()
    private val dispatcher = EffectDispatcher(handler) { id, bytes ->
        scope.launch { process(bridge.resolve(id, bytes)) }
    }

    /// Build a `Core` over the `CoreFfi` the Rust crate exports — the shell
    /// writes the handler and never sees the bridge.
    constructor(handler: EffectHandler, scope: CoroutineScope) : this(FfiBridge(), handler, scope)

    /// Send an event to the core and run the loop it starts.
    fun update(event: Shared.Event) {
        process(bridge.update(event.bincodeSerialize()))
    }

    /// Serialized requests, as returned by the bridge or pushed by middleware.
    fun process(bytes: ByteArray) {
        if (bytes.isEmpty()) return
        process(Requests.bincodeDeserialize(bytes).value)
    }

    fun process(requests: List<Request>) {
        for (request in requests) {
            if (request.effect is Effect.Render) {
                _view.value = Shared.ViewModel.bincodeDeserialize(bridge.view())
                continue
            }
            scope.launch { dispatcher.dispatch(request) }
        }
    }
}
