crux_core/src/type_generation/facet/plugins/snapshots/crux_core__type_generation__facet__plugins__tests__core_swift.snap
---
source: crux_core/src/type_generation/facet/plugins/tests.rs
expression: "core::<Swift>()"
---

/// The core's FFI surface, as bytes. Implement it around the `CoreFfi` your
/// Rust crate exports, or with a fake for previews and tests.
public protocol CoreBridge: Sendable {
    func update(_ event: [UInt8]) -> [UInt8]
    func resolve(_ id: UInt32, _ output: [UInt8]) -> [UInt8]
    func view() -> [UInt8]
}

/// The shell's side of the core: it serializes events, dispatches the
/// requests that come back, and resolves them through the bridge.
///
/// `Render` is handled here, so an `EffectHandler` need not implement it.
///
/// `view` is observable, so a SwiftUI view that reads it is invalidated
/// whenever the core renders.
@available(macOS 14.0, iOS 17.0, tvOS 17.0, watchOS 10.0, *)
@Observable
@MainActor
public final class Core {
    /// The view model as of the last `Render`.
    public private(set) var view: ViewModel
    @ObservationIgnored private let bridge: any CoreBridge
    @ObservationIgnored private var dispatcher: EffectDispatcher!

    public init(bridge: any CoreBridge, handler: any EffectHandler) {
        self.bridge = bridge
        self.view = try! ViewModel.bincodeDeserialize(input: bridge.view())
        self.dispatcher = EffectDispatcher(handler: handler) { [weak self] id, bytes in
            Task { @MainActor in
                guard let self else { return }
                self.process(bytes: self.bridge.resolve(id, bytes))
            }
        }
    }

    /// Send an event to the core and run the loop it starts.
    public func update(_ event: Event) {
        process(bytes: bridge.update(try! event.bincodeSerialize()))
    }

    /// Serialized requests, as returned by the bridge or pushed by middleware.
    public func process(bytes: [UInt8]) {
        if bytes.isEmpty { return }
        process(try! Requests.bincodeDeserialize(input: bytes).value)
    }

    public func process(_ requests: [Request]) {
        for request in requests {
            if case .render = request.effect {
                view = try! ViewModel.bincodeDeserialize(input: bridge.view())
                continue
            }
            dispatcher.dispatch(request)
        }
    }
}
