crux_core/src/type_generation/facet/plugins/snapshots/crux_core__type_generation__facet__plugins__tests__core_typescript_with_boltffi.snap
---
source: crux_core/src/type_generation/facet/plugins/tests.rs
expression: "core_with_boltffi::<TypeScript>()"
---

/// The core's FFI surface, as bytes. Implement it around the bindings your
/// Rust crate exports, or with a fake for tests.
export interface CoreBridge {
    update(event: Uint8Array): Uint8Array;
    resolve(id: uint32, output: Uint8Array): Uint8Array;
    view(): Uint8Array;
}

/// The generated `CoreBridge`, implemented over BoltFFI's `CoreFfi`: bytes
/// in, bytes out, nothing else. `CoreFfi.new()` reaches into the wasm
/// module, so build one only once the package has loaded — `Core.create`
/// waits for that.
export class FfiBridge implements CoreBridge {
    private readonly ffi = boltffi.CoreFfi.new();

    update(event: Uint8Array): Uint8Array {
        return this.ffi.update(event);
    }

    resolve(id: uint32, output: Uint8Array): Uint8Array {
        return this.ffi.resolve(id, output);
    }

    view(): Uint8Array {
        return this.ffi.view();
    }
}

/// The shell's side of the core: it serializes events, dispatches the
/// requests that come back, and resolves them through the bridge.
///
/// `Render` is handled here, so an `EffectHandler` need not implement it.
export class Core {
    /// The view model as of the last `Render`.
    public view: ViewModel;
    private readonly dispatcher: EffectDispatcher;

    constructor(
        private readonly bridge: CoreBridge,
        handler: EffectHandler,
        private readonly onView: (view: ViewModel) => void,
    ) {
        this.view = this.readView();
        this.dispatcher = new EffectDispatcher(handler, (id, bytes) => {
            this.processBytes(this.bridge.resolve(id, bytes));
        });
    }

    /// Build a `Core` over the `CoreFfi` the Rust crate exports, once the
    /// wasm module has loaded.
    public static async create(
        handler: EffectHandler,
        onView: (view: ViewModel) => void,
    ): Promise<Core> {
        await (boltffi as unknown as { initialized: Promise<void> }).initialized;
        return new Core(new FfiBridge(), handler, onView);
    }

    /// Send an event to the core and run the loop it starts.
    public update(event: Event): void {
        const serializer = new BincodeSerializer();
        serializeEvent(event, serializer);
        this.processBytes(this.bridge.update(serializer.getBytes()));
    }

    /// Serialized requests, as returned by the bridge or pushed by middleware.
    public processBytes(bytes: Uint8Array): void {
        if (bytes.length === 0) { return; }
        const deserializer = new BincodeDeserializer(bytes);
        this.process(Requests.deserialize(deserializer).value);
    }

    public process(requests: Request[]): void {
        for (const request of requests) {
            if (request.effect.kind === "Render") {
                this.view = this.readView();
                this.onView(this.view);
                continue;
            }
            this.dispatcher.dispatch(request);
        }
    }

    private readView(): ViewModel {
        const deserializer = new BincodeDeserializer(this.bridge.view());
        return ViewModel.deserialize(deserializer);
    }
}
